Bug 868684 - OdinMonkey: sequential compilation allocates LIR in the tempLifoAlloc (r=sstangl)